<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp"
    android:gravity="center"
    android:background="@drawable/img_1"
    tools:context=".ProductActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_information"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        />


    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        android:padding="20dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:hint="@string/product_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Product ID"
                tools:ignore="ExtraText" />
        </com.google.android.material.textfield.TextInputLayout>
        <EditText
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:background="@drawable/border"
            android:padding="20dp"
            android:layout_marginBottom="10dp"


            />


        <EditText
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:background="@drawable/border"
            android:padding="20dp"
            android:layout_marginBottom="10dp"
            />


        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="10dp"
            />


        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/outputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        android:padding="30dp"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/outputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            />
    </LinearLayout>





</LinearLayout>
